--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
         "uglify-es": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "vue-router": "^3.0.3",
+        "vuex": "^3.1.0"
     },
     "dependencies": {
         "bootstrap-vue": "0.20.1",
@@ -27,7 +29,6 @@
         "font-awesome": "^4.7.0",
         "simple-line-icons": "^2.4.1",
         "vue-chartjs": "2.8.1",
-        "vue-router": "^2.7.0",
         "vue-strap": "github:wffranco/vue-strap"
     }
 }
