--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^4.0.15",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
         "uglify-es": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
@@ -24,9 +24,12 @@
         "vuex": "^3.1.0"
     },
     "dependencies": {
-        "bootstrap-vue": "0.20.1",
+        "babel-runtime": "^6.26.0",
+        "bootstrap-vue": "^2.0.0-rc.12",
         "chart.js": "2.6.0",
         "font-awesome": "^4.7.0",
+        "node-sass": "^4.11.0",
+        "sass-loader": "^7.1.0",
         "simple-line-icons": "^2.4.1",
         "vue-chartjs": "2.8.1",
         "vue-strap": "github:wffranco/vue-strap"
