--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=laracoreui
+DB_DATABASE=larapos
 DB_USERNAME=postgres
 DB_PASSWORD=in12345
 
